# nes-emulator

./: CMakeLists.txt  NOTES  README.md  TODO
src/: CMakeLists.txt  cpu.cpp  cpu.h  cpu_instructions.cpp  cpu_instructions.h  main.cpp  memory.h  ppu.cpp  ppu.h
tests/: CMakeLists.txt  test_cpu.cpp  test_cpu_instructions.cpp  test_memory.cpp
tests/mocks/: cpu.h  ppu.h
